Installed should be false. And...
Installed should be false. Because this is only meant to be true for plugins that are installed to the engine. This is set automatically when the plugin is installed via the marketplace.

I presume WhitlistPlatforms was included to meet marketplace regulations. I find it more pragmatic to instead BlacklistPlatforms None.

--- a/Plugins/RecentAssetsMenu/RecentAssetsMenu.uplugin
+++ b/Plugins/RecentAssetsMenu/RecentAssetsMenu.uplugin
@@ -13,18 +13,13 @@
 	"CanContainContent": false,
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": false,
-	"Installed": true,
+	"Installed": false,
 	"Modules": [
 		{
 			"Name": "RecentAssetsMenu",
 			"Type": "EditorNoCommandlet",
 			"LoadingPhase": "Default",
-			"WhitelistPlatforms": [
-				"Win64",
-				"Win32",
-				"Mac",
-				"Linux"
-			]
+			"BlacklistPlatforms": []
 		}
 	]
 }
